<resources>
    <string name="app_name">RGB-A (MVC)</string>
    <string name="action_about">About</string>
    <!-- TODO: replace your name -->
    <string name="author">Geemakun Storey (stor0095)</string>
    <string name="alpha">Transparency (Alpha)</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="magenta">Magenta</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
</resources>
